--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -10,10 +10,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: apt install -y build-essential dkms git iw
+        run: sudo apt install -y build-essential dkms git iw
 
       - name: Build & install driver
-        run: sh install-driver.sh NoPrompt
+        run: sudo sh install-driver.sh NoPrompt
 
   build-fedora:
     runs-on: fedora-latest
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: dnf -y install git dkms kernel-devel
+        run: sudo dnf -y install git dkms kernel-devel
 
       - name: Build & install driver
-        run: sh install-driver.sh NoPrompt
+        run: sudo sh install-driver.sh NoPrompt
